<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Chat_Window"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reciver_name"
        android:textSize="30sp"
        android:textAlignment="center"
        android:id="@+id/chatwin_tv1" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chatwin_ll1"
            android:orientation="vertical">

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <EditText
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:hint="@string/enter_message"
            android:id="@+id/chatwin_et1"
            tools:ignore="NestedWeights" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:id="@+id/chatwin_b1" />

    </LinearLayout>

</LinearLayout>